# ogis-code

./: README.md  pyproject.toml
app/: 🏠_ホーム.py
app/pages/: 1_📊_可視化.py  2_💬_チャット.py  3_📝_分析.py
data/2024-01-18/: sample.sqlite3  過去プロジェクト収集データ（サンプル）.xlsx
data/2024-01-18/csv/: ST.csv  基本設計.csv  実装・単テ.csv  結テ.csv  要件定義.csv  詳細設計.csv
data/2024-01-18/json/ST/: ST.schema.json  ST_00.json  ST_01.json  ST_02.json  ST_03.json  ST_04.json  ST_05.json  ST_06.json  ST_07.json  ST_08.json  ST_09.json  ST_10.json  ST_11.json
data/2024-01-18/json/基本設計/: 基本設計.schema.json  基本設計_00.json  基本設計_01.json  基本設計_02.json  基本設計_03.json  基本設計_04.json  基本設計_05.json  基本設計_06.json  基本設計_07.json  基本設計_08.json  基本設計_09.json  基本設計_10.json  基本設計_11.json  (+15 more)
data/2024-02-29/2024-02-29/: IPA_2018-2019.txt
data/2024-02-29/参照項目/: ST_参照項目.json  基本設計_参照項目.json  実装・単テ_参照項目.json  要件定義_参照項目.json
docker/: .dockerignore  Dockerfile  compose.yaml  db-build-1.Dockerfile  db-build-1.compose.yaml  db-build-2.Dockerfile  db-build-2.compose.yaml
src/app_util/: common.py  sidebar.py
src/orchestrator/: review.py
src/rag_tabular/: __main__.py  csv_to_json.py  excel_to_csv.py  json_to_db.py
src/rag_textual/: __main__.py  retrieve_from_db.py  txt_to_db.py
src/util/: api.py  catvar.py
test/app_test/: 1_📊_可視化_test.py  2_💬_チャット_test.py  3_📝_分析_test.py
test/orchestrator_test/: review_test.py
test/rag_tabular_test/: csv_to_json_test.py  excel_to_csv_test.py  json_to_db_test.py
test/rag_textual_test/: retrieve_from_db_test.py  txt_to_db_test.py
test/util_test/: api_test.py  catvar_test.py
(+80 files in other folders)
